# python-project-template

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.rst  codecov.yml  pyproject.toml  tox.ini
.github/workflows/: pre-commit.yml
docs/source/: conf.py  index.rst  readme.rst
src/python_project_template/: hello_world.py
src/tox_poetry/: hello_world.py
tests/: test_python_version_printer.py  test_tox_poetry.py
tox_poetry/: hello_world.py
