[tool.poetry]
name = "python-project-template"
version = "0.2.0"
description = ""
authors = ["mog <mo.gao@foxmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"
pre-commit = "^2.13.0"
black = "^21.7b0"
flake8 = "^3.9.2"
mypy = "^0.910"
sphinx = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.scripts]
hello = "python_project_template.hello_world:main"

[tool.black]
line-length = 88
#target-version = ['py37', 'py38']
include = "\\.pyi?$"
exclude = '''
/(
  \.toml
  |\.lock
  |\.sh
  |\.git
  |\.ini
  |\.gitignore
  |\.coveragerc
  |\.coverage
  |\.tox
  |Dockerfile
  |\.Dockerfile
  |\.python-version
  |\.rst
  |\.pytest_cache
  |dist
  |build
  |_build
  |\.venv
  |\docs/source/conf.py
)/
'''
